Final: Phase 6 completed